# TinyRenderer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Justfile
src/: geometry.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h
